<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue_dark"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewCruz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cruz"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCruz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="364dp"
            android:padding="50dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name_hint" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextName"
                android:layout_marginTop="16dp"
                android:hint="@string/email_hint" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmail"
                android:layout_marginTop="25dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/register_button_text" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginStart="120dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_light"
                android:text="@string/login_button_text" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>